# Environments

./: .gitignore  CLEANUP_SUMMARY.md  Dockerfile  LICENSE  README.md  advanced_eval_config.toml  algotune_complete_example.py  algotune_detailed_analysis.py  check_all_steps.py  check_db.py  conftest.py  debug_enron_step.py  debug_single_trajectory.py  debug_trace.py  demo_config.toml  enron_changes.txt  example_eval_implementation.py  explore_algotune.py  hello.py  launch_duckdb_viewer.py  pyproject.toml  run_crafter_with_images.py  run_eval.sh  run_filtered_eval.py  run_local_viewer.sh  run_o3_eval.py  run_real_gemini.py  run_service.sh  run_tests.py  run_tests.sh  run_unified_viewer.sh  simple_duckdb_viewer.py  simple_eval_demo.py  sokoban_crafter_config.toml  sokoban_crafter_eval.py  sokoban_focused_eval.py  sokoban_working_eval.py  synth_eval.duckdb  test_adder4.v  test_adder4_tb.v  (+23 more)
dev/: contributing.md  env_contribution_guide.md  issues.md  pr_checklist.md  run_test_durations.py  testing.md  update_readme_metrics.py
dev/todos/: env_specific.md  minigrid_viewer_prd.md
evals/configs/: crafter_basic.toml  sokoban_basic.toml  verilog_adder4.toml
evaluation_results/20250612_225757/gemini-1.5-flash/: run_gemini_1_5_flash.py
evaluation_results/20250612_225757/gpt-4-nano/: run_gpt_4_nano.py
evaluation_results/20250612_233042/gemini-1.5-flash/: run_gemini_1_5_flash.py
evaluation_results/20250612_233042/gpt-4-nano/: run_gpt_4_nano.py
evaluation_results/20250612_233042/gpt-4.1-nano/: run_gpt_4_1_nano.py
examples/crafter_classic/: engine.py  engine_deterministic_patch.py  environment.py  taskset.py
examples/crafter_classic/agent_demos/: test_synth_react.py
examples/crafter_classic/engine_helpers/: serialization.py
examples/enron/: engine.py  environment.py  taskset.py
examples/enron/art_helpers/: email_search_tools.py
examples/enron/units/: keyword_stats.py
examples/math/: schema.py
examples/math/agent_demos/: plan_execute.py
examples/nmmo_classic/: taskset.py
examples/nmmo_classic/agent_demos/: test_synth_react.py
examples/sokoban/: engine.py  environment.py  taskset.py
examples/sokoban/agent_demos/: test_synth_react.py  test_synth_react_service.py
examples/sokoban/engine_helpers/: room_utils.py
examples/sokoban/units/: astar_common.py  test_building_task_set.py  test_false_positive.py  test_simple_run_through_engine.py  test_simple_run_through_environment.py  test_sokoban_environment.py  test_tree.py
examples/swe_bench/: engine.py  taskset.py
examples/swe_bench/agent_demos/: test_synth_react.py
examples/swe_bench/units/: test_engine.py
rust_port/: Cargo.toml  README.md
rust_port/core/: Cargo.toml
rust_port/core/src/: lib.rs
rust_port/demos/tictactoe_react_demo/: Cargo.toml  README.md
rust_port/demos/tictactoe_react_demo/src/: main.rs
rust_port/envs/minigrid_env/: Cargo.toml
rust_port/envs/sokoban_env/: Cargo.toml
rust_port/envs/sokoban_env/src/: lib.rs
rust_port/envs/tictactoe_env/: Cargo.toml  README.md
rust_port/horizons_env_py/: Cargo.toml  pyproject.toml
rust_port/horizons_env_py/src/: lib.rs
rust_port/service/env_service/: Cargo.toml
rust_port/service/env_service/src/: lib.rs  main.rs
rust_port/service/env_service/tests/: http_flow.rs
rust_port/vendored_envs/minigrid/: Cargo.toml  run_all.sh
rust_port/vendored_envs/minigrid/src/: lib.rs
rust_port/vendored_envs/minigrid/tests/: basic.rs  doorkey.rs  environment_specific.rs  fourrooms.rs  lava_drop.rs  movement.rs  object_interactions.rs  rollout.rs  type_system.rs  unlock.rs  unlockpickup.rs  validity_integration.rs
rust_port/vendored_envs/minigrid/validity/: README.md  cases.jsonl  run_all.sh  rust_tests.rs  test_action_diffs.py  test_parity_presets.py  test_validity_cases.py
rust_port/vendored_envs/sokoban/: Cargo.toml
rust_port/vendored_envs/tictactoe_rs/: Cargo.toml  (+1 more)
scripts/: check_health.py  check_parity.sh  eval_tictactoe_service.py  export_sokoban_preset_levels.py  import_eval_dirs_to_db.py  increment_version.py  manual_sokoban_compare.py  parity_service_pyo3_vs_pure.py  release.py  run_dev_helpers.sh  run_sokoban_solution.py  run_viewer.sh  setup_py311_venv.sh
src/: __init__.py
src/environment/: core.py  registry.py  results.py  shared_engine.py
src/evals/: README.md
src/examples/nmmo_classic/: engine.py  environment.py  pyproject.toml  run_test.py  state.py  taskset.py
src/examples/nmmo_classic/agent_demos/: simple_demo.py  test_synth_react.py
src/examples/nmmo_classic/maps/medium/map1/: fractal.npy
src/examples/nmmo_classic/units/: test_nmmo_basic.py  test_nmmo_environment.py  test_sanity.py
src/horizons/: __init__.py  __main__.py
src/reproducibility/: core.py  tree.py
src/rewards/: __init__.py
src/service/: app.py  core_routes.py  registry.py
src/stateful/: core.py  engine.py  state.py
src/synth_env/: __init__.py
src/tasks/: api.py  core.py  filters.py  utils.py
src/v0_observability/: history.py  log.py
src/viewer/: README.md  create_test_data.py  db_config.py  db_models.py  db_queries.py  db_schema.py  debug_db_path.py  import_evals.py  inspect_db_schema.py  migrate_db.py  populate_test_data.py  run.sh  run_viewer.sh  streamlit_app.py  synth_sdk_trace_helpers.py  test_database_modules.py  test_db_config.py  test_db_queries.py  test_trace_loading.py  validate_setup.py  validate_synth_sdk_trace.py  verify_db_paths.py
tests/: import_error.py  test_pokemon_red_react.py  test_rust_tictactoe_obs_spec.py  test_storage_modes_e2e.py  test_updated_engine.py
tests/integration/: test_all_environments_api.py  test_crafter_api_bug.py  test_finance_correctness.py  test_gpt5_nano_environments.py  test_minigrid_environment.py  test_nethack_environment.py  test_scicode_env.py  test_service_api.py  test_sokoban_service.py
tests/unit/: test_all_environments_api.py  test_crafter_api_bug.py  test_external_registry.py  test_finance_env.py  test_math_environment.py  test_minigrid_service_integration.py  test_registry.py  test_sokoban_failure.py  test_sokoban_qstar.py  test_terminal_bench.py
todos/: nethack_viewer_prd.md
(+523 files in other folders)
