[project]
name = "synth-env"
version = "0.0.1.dev2"
description = ""
authors = [{name = "Synth AI", email = "josh@usesynth.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "pydantic-openapi-schema>=1.5.1",
    "pytest-asyncio>=0.24.0",
    "numpy>=2.2.3",
    "networkx>=3.4.2",
    "synth-ai",
    "synth-sdk",
    "crafter>=1.8.3",
    "fastapi>=0.115.12",
    "gym-sokoban>=0.0.6",
    "gymnasium>=1.1.1",
    "uvicorn>=0.34.2",
    "ty>=0.0.1a5",
    "ruff>=0.11.10",
    "pyboy>=2.6.0",
    "setuptools>=80.8.0",
    "psutil>=7.0.0",
]
classifiers = []

[project.urls]
Homepage = "https://github.com/synth-laboratories/Environments"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.uv.sources]
# synth-sdk = { path = "../synth-monorepo/synth-sdk", editable = true }
# synth-ai = { path = "../synth-monorepo/synth-ai", editable = true }

[tool.hatch.envs.default.env]
path = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto" # Or "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The configuration option \\\"asyncio_default_fixture_loop_scope\\\" is unset:pytest.PytestDeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning:gym_sokoban.*",
    "ignore:pkg_resources is deprecated:DeprecationWarning", # General pkg_resources
    "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
    "ignore:Starting with ImageIO v3.*:DeprecationWarning:gym_sokoban\\.envs\\.render_utils",
]
addopts = "-v" # Keep other options minimal for now

[tool.setuptools.packages.find]
where = ["src"]
# include = ["*"] # Optional: often not needed if all dirs in src are packages

[tool.ty]
src = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
