[project]
name = "synth-env"
version = "0.1.3.dev4"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "pydantic", "python-dotenv>=1.0.1", "pytest>=8.3.3", "pydantic-openapi-schema>=1.5.1", "pytest-asyncio>=0.24.0", "numpy>=2.2.3", "networkx>=3.4.2", "synth-ai", "synth-sdk", "crafter>=1.8.3", "fastapi>=0.115.12", "gym-sokoban>=0.0.6", "gymnasium>=1.1.1", "uvicorn>=0.34.2", "ty>=0.0.1a5", "ruff>=0.11.10", "pyboy>=2.6.0", "setuptools>=80.8.0", "psutil>=7.0.0", "redis>=6.2.0", "imageio>=2.31.0", "nle>=0.9.1", "matplotlib>=3.10.3", "seaborn>=0.13.2", "pillow>=11.2.1", "minigrid>=3.0.0", "tabulate>=0.9.0", "tqdm>=4.67.1", "duckdb>=1.0.0", "pyarrow>=18.0.0", "reflex>=0.3.8", "pandas>=2.2.3",]
classifiers = []
[[project.authors]]
name = "Synth AI"
email = "josh@usesynth.ai"

[build-system]
requires = [ "uv_build>=0.7.19,<0.8.0",]
build-backend = "uv_build"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/synth-laboratories/Environments"

[tool.ty]
src = [ "src",]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true

[tool.uv]
dev-dependencies = [ "pytest>=8.3.5", "pytest-cov>=6.2.1", "requests>=2.32.3", "toml>=0.10.2",]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [ "ignore:The configuration option \\\"asyncio_default_fixture_loop_scope\\\" is unset:pytest.PytestDeprecationWarning", "ignore:pkg_resources is deprecated:DeprecationWarning:gym_sokoban.*", "ignore:pkg_resources is deprecated:DeprecationWarning", "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning", "ignore:Starting with ImageIO v3.*:DeprecationWarning:gym_sokoban\\.envs\\.render_utils",]
addopts = "-v"

[tool.setuptools.packages.find]
where = [ "src",]

[tool.hatch.envs.default.env]
path = ".venv"
