[package]
name = "horizons-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core traits and types for Horizons environments (Rust port)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
