[package]
name = "tictactoe-react-demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ReAct-style agent demo playing TicTacToe via async-openai"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
async-openai = { version = "0.25", default-features = false, features = ["rustls"] }
horizons-core = { path = "../../core" }
tictactoe-env = { path = "../../envs/tictactoe_env" }

