[package]
name = "sokoban-env"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sokoban environment implementing Horizons core Environment trait"

[dependencies]
horizons-core = { path = "../../core" }
sokoban-rs = { path = "../../vendored_envs/sokoban" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
