[package]
name = "env-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "HTTP service exposing Horizons Rust environments"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
horizons-core = { path = "../../core" }
tictactoe-env = { path = "../../envs/tictactoe_env" }

[dev-dependencies]
tower = "0.4"
