[package]
name = "minigrid-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure MiniGrid logic crate (grid + rules + serde)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
