[project]
name = "nmmo-classic-env"
version = "0.0.1"
description = "NMMO Classic Environment with compatible dependencies"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pytest>=7.3.0",
    "numpy>=1.23.3,<2.0.0",
    "gymnasium<1.0.0",
    "pufferlib>=2.0.6",
    "nmmo>=2.1.2",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "asyncio>=3.4.3",
    "pathlib>=1.0.1",
    "tabulate>=0.9.0", 
    "pytest-asyncio>=0.23.8",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["*"]

[tool.uv]
override-dependencies = [
    "numpy>=1.23.3,<2.0.0",
    "gymnasium<1.0.0", 
    "nmmo>=2.1.2",
    "pufferlib>=2.0.6",
]
